fixing the scrollbars

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ p{
   .images{
     z-index: -1;
     position: absolute;
-    top: 10vh;
+    top: 50vh;
   }
   .phone{
     max-width: 100vw;
@@ -259,7 +259,7 @@ p{
     }
     .images{
       top: 25vh;
-      right: 0vw;
+      right: 5vw;
     }
     #character-amount-container{
       justify-content: flex-end;
